use Collectors.toList() instead for compatiability and consistency